tests/ui/cached_ttl_millis_zero.stderr
error: `ttl_millis` must be >= 1
 --> tests/ui/cached_ttl_millis_zero.rs:4:4
  |
4 | fn f(x: i32) -> i32 {
  |    ^
